# cmake-skeleton

./: CMakeLists.txt  README.md
source/: main.c
